# widget-test

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  package.json  pyproject.toml  pytest.ini  webpack.config.js  widget_test.json
.github/workflows/: build.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
src/: extension.ts  index.ts  plugin.ts  widget.ts
widget/: package.json  webpack.config.js
widget/src/: version.ts
widget_test/: __init__.py  _frontend.py  _version.py  example.py
widget_test/nbextension/: extension.js
widget_test/tests/: conftest.py  test_example.py  test_nbextension_path.py
